--- a/tutorial_notebooks/01_prompt_engineering_chatgpt.ipynb
+++ b/tutorial_notebooks/01_prompt_engineering_chatgpt.ipynb
@@ -65,6 +65,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from google.oauth2 import service_account\n",
+        "from google.cloud import aiplatform\n",
+        "# from deepeval.models.base_model import DeepEvalBaseLLM\n",
+        "from llama_index.legacy.llms.vertex import Vertex\n",
+        "from langchain.chat_models import ChatVertexAI\n",
+        "from llama_index.legacy.llms.langchain import LangChainLLM\n",
+        "import json "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "credentials = service_account.Credentials.from_service_account_file(\"credentials\\\\datacafeplayground-757afeea3a23.json\")\n",
+        "vertex = Vertex(model=\"text-bison\", project=credentials.project_id, credentials=credentials, temperature=0)\n",
+        "vertex_llm = LangChainLLM(ChatVertexAI(model_name=\"chat-bison@002\",\n",
+        "                                         temperature=0.2,\n",
+        "                                         max_output_tokens=256)\n",
+        "                                         )"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ExKTxtIMcwdR"
@@ -75,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "metadata": {
         "id": "hqjsd-cpcnV_"
       },
@@ -83,7 +112,7 @@
       "source": [
         "def get_completion(prompt: str):\n",
         "    response = client.chat.completions.create(\n",
-        "        model=\"gpt-3.5-turbo\",\n",
+        "        model=vertex_llm,\n",
         "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
         "    )\n",
         "    return response.choices[0].message.content.strip()"
@@ -91,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,29 +130,15 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[\n",
-            "    {\n",
-            "        \"book_id\": 1,\n",
-            "        \"title\": \"เงินหายาก\",\n",
-            "        \"author\": \"สมชาย ปราบสาน\",\n",
-            "        \"genre\": \"อาชญากรรม\"\n",
-            "    },\n",
-            "    {\n",
-            "        \"book_id\": 2,\n",
-            "        \"title\": \"โสภาศาสตร์\",\n",
-            "        \"author\": \"สุรชาติ สงสัย\",\n",
-            "        \"genre\": \"วิทยาศาสตร์\"\n",
-            "    },\n",
-            "    {\n",
-            "        \"book_id\": 3,\n",
-            "        \"title\": \"รอยยิ้มของวันหนึ่ง\",\n",
-            "        \"author\": \"วรรณิช สุขสาธุ\",\n",
-            "        \"genre\": \"โรแมนติก\"\n",
-            "    }\n",
-            "]\n"
+          "ename": "NameError",
+          "evalue": "name 'client' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[15], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124mGenerate a list of three made-up book titles along \u001b[39m\u001b[38;5;130;01m\\\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124mwith their authors and genres.\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124mProvide them in JSON format with the following keys:\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124mbook_id, title, author, genre where title and author are in Thai.\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mget_completion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(response)\n",
+            "Cell \u001b[1;32mIn[12], line 2\u001b[0m, in \u001b[0;36mget_completion\u001b[1;34m(prompt)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_completion\u001b[39m(prompt: \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m----> 2\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m      3\u001b[0m         model\u001b[38;5;241m=\u001b[39mvertex_llm,\n\u001b[0;32m      4\u001b[0m         messages\u001b[38;5;241m=\u001b[39m[{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: prompt}]\n\u001b[0;32m      5\u001b[0m     )\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent\u001b[38;5;241m.\u001b[39mstrip()\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'client' is not defined"
           ]
         }
       ],
@@ -140,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 16,
       "metadata": {
         "id": "X0H31AwGdsUY"
       },
@@ -160,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -170,16 +185,15 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1. นายชัชชาติ สิทธิพันธุ์ ประธานพิธีเปิดกิจกรรม \"Colorful คลองบางลำพู\" ณ บริเวณสะพานนรรัตน์สถาน ริมคลองบางลำพู เขตพระนคร\n",
-            "2. Colorful คลองบางลำพู เป็นโครงการฟื้นฟูเมืองเก่า โดยมีอาจารย์ประจำคณะมัณฑนศิลป์ช่วยออกแบบสี ให้เนื่องของคลองบางลำพูเป็นสีครีม\n",
-            "3. อาจารย์ประจำคณะมัณฑนศิลป์เลือกสีสีเนื้อ สีนวล สีนวลจันทร์ สีขาวผ่อง และสีชาดหรือสีท้องสิงห์ ในการทาสีของตึกแต่ละอาคาร\n",
-            "4. คณะมัณฑนศิลป์ขอขอบคุณทางสีเบเยอร์ กลุ่มสมาคมการค้าธุรกิจในแม่น้ำเจ้าพระยา และผู้ประกอบการในพื้นที่ ในการช่วยทาสีให้กับโครงการ\n",
-            "5. ชัชชาติ สิทธิพันธุ์ กล่าวว่าการฟื้นฟูเมืองเก่าต้องร่วมมือกันทุกภาคส่วน\n",
-            "\n",
-            "***คลองบางลำพูถือเป็นจุดท่องเที่ยวที่สำคัญของกรุงเทพมหานครและในการตกแต่งใหม่โครงการ Colorful คลองบางลำพู จะช่วยเพิ่มความสวยงามและเป็นจุดสนใจให้กับที่นี้***\n"
+          "ename": "NameError",
+          "evalue": "name 'client' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[17], line 18\u001b[0m\n\u001b[0;32m      1\u001b[0m prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124mYou will be provided with text delimited by triple quotes.\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124mIf it contains a content from Thai news article, \u001b[39m\u001b[38;5;130;01m\\\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mtext\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m---> 18\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mget_completion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(response)\n",
+            "Cell \u001b[1;32mIn[12], line 2\u001b[0m, in \u001b[0;36mget_completion\u001b[1;34m(prompt)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_completion\u001b[39m(prompt: \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m----> 2\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m      3\u001b[0m         model\u001b[38;5;241m=\u001b[39mvertex_llm,\n\u001b[0;32m      4\u001b[0m         messages\u001b[38;5;241m=\u001b[39m[{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: prompt}]\n\u001b[0;32m      5\u001b[0m     )\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent\u001b[38;5;241m.\u001b[39mstrip()\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'client' is not defined"
           ]
         }
       ],
@@ -565,7 +579,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
