--- a/tutorial_notebooks/minnieLLM.ipynb
+++ b/tutorial_notebooks/minnieLLM.ipynb
@@ -143,7 +143,11 @@
     "vertex_ai = Vertex(model=\"text-bison\", project=credentials.project_id, location= \"asia-southeast1\", credentials=credentials, temperature=0.2)\n",
     "text_model = TextGenerationModel.from_pretrained(\"text-bison@002\")\n",
     "text_vertex_ai = VertexAI(model_name=\"text-bison@002\", project=credentials.project_id, location= \"asia-southeast1\", credentials=credentials, temperature=0.2)                       \n",
-    "chat_vertex_ai = ChatVertexAI(model_name=\"chat-bison-32k\", project=credentials.project_id, location= \"asia-southeast1\", credentials=credentials, temperature=0.2, max_output_tokens= 8192) # max for bison 32k\n",
+    "chat_vertex_ai = ChatVertexAI(model_name=\"chat-bison@002\", project=credentials.project_id, location= \"asia-southeast1\", credentials=credentials, temperature=0.2)\n",
+    "langchain_chat_vertex_ai = LangChainLLM(ChatVertexAI(model_name=\"chat-bison@002\", project=credentials.project_id, location= \"asia-southeast1\", credentials=credentials, temperature=0.2))\n",
+    "\n",
+    "selected_model = langchain_chat_vertex_ai\n",
+    "\n",
     "embed_model = LangchainEmbedding(VertexAIEmbeddings(model_name='textembedding-gecko-multilingual@latest'))"
    ]
   },
@@ -431,8 +435,8 @@
     "csv_file_path = \"../data/siriraj_doctor_details.csv\"\n",
     "csv_df = pd.read_csv(csv_file_path)\n",
     "columns_to_drop = ['image_src', 'url', 'qualification']\n",
-    "df = csv_df.drop(columns=[col for col in csv_df.columns if col in columns_to_drop])\n",
-    "df"
+    "csv_df = csv_df.drop(columns=[col for col in csv_df.columns if col in columns_to_drop])\n",
+    "csv_df"
    ]
   },
   {
@@ -1121,7 +1125,7 @@
     }
    ],
    "source": [
-    "csv_data = df.apply(lambda x: ''.join(x.astype(str)), axis=1).tolist()\n",
+    "csv_data = csv_df.apply(lambda x: ''.join(x.astype(str)), axis=1).tolist()\n",
     "csv_data = [Document(text=t) for t in csv_data] # produce Documents from csv data\n",
     "print(len(csv_data))\n",
     "print(csv_data)"
