tested doctor availability responses

--- a/tutorial_notebooks/minnieLLM_test_appointment.ipynb
+++ b/tutorial_notebooks/minnieLLM_test_appointment.ipynb
@@ -3035,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -3043,84 +3043,68 @@
      "output_type": "stream",
      "text": [
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: b623940a-266f-4483-850b-7e1571d5612a.\n",
-      "> Parent node text: ผศ. พญ.สิรินาถ สิรินทร์วราวงศ์พุธ 17:00 - 19:00 น. สัปดาห์ที่ 2,4,5 ศุกร์ 14:00 - 16:00 น. สัปดาห...\n",
+      "> Parent node id: a34c5570-be67-4837-af3c-f25f3e76658c.\n",
+      "> Parent node text: ผศ. พญ.กันต์กมล จัยสินศุกร์ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 16:00 น. สัปดาห์ที่ 1,2...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: aa658e96-ca3e-4feb-b36e-299e10e5327d.\n",
-      "> Parent node text: รศ. นพ.จุลจักร ลิ่มศรีวิไลพฤหัสบดี 16:00 - 19:00 น. สัปดาห์ที่ 1,2,3,4,5 ศุกร์ 09:30 - 12:30 น. ส...\n",
+      "> Parent node id: 4f9f023b-ca40-4949-afb2-38404ab07e4a.\n",
+      "> Parent node text: พญ.ปุญญิศา ปราชญ์โกสินทร์จันทร์ 16:30 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พุธ 16:30 - 20:00 น. สัปดาห...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 3a276b05-8c7b-4d59-a6f2-ea8c2318d95c.\n",
-      "> Parent node text: รศ. นพ.เอกรินทร์ โชติกวาณิชย์พุธ 13:00 - 13:30 น. สัปดาห์ที่ 1,2,3,4,5 เสาร์ 09:00 - 12:00 น. สัป...\n",
+      "> Parent node id: c682a2a0-ccde-48d6-b75e-af27ccea00c9.\n",
+      "> Parent node text: พญ.คริษฐา ศุภนิมิตอมรจันทร์ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์49\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 25616694-8897-450c-bbb7-8ae05a093dfe.\n",
-      "> Parent node text: รศ. นพ.สุนัย ลีวันแสงทองพุธ 14:30 - 15:30 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 12:00 - 14:30 น. สัปดา...\n",
+      "> Parent node id: 5668ad8e-3f27-4c74-b954-d9b6e832f359.\n",
+      "> Parent node text: อ. พญ.ธิดารัตน์ ปุรณะชัยคีรีพุธ 15:00 - 21:00 น. สัปดาห์ที่ 2,3,4,5 15:30 - 20:00 น. สัปดาห์ที่ 1...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: f845b397-47b3-4a58-ade2-45a8e6bc5c83.\n",
-      "> Parent node text: อ. นพ.ชวลิต โชติเรืองนภาจันทร์ 15:30 - 17:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 16:00 - 18:00 น. สั...\n",
+      "> Parent node id: dbfbfc90-6796-402b-9012-e29c17eda444.\n",
+      "> Parent node text: นพ.กันตณัฏฐ์ อยู่ตรีรักษ์พุธ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 17:00 - 20:00 น. สัปด...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 79eaa274-025c-4162-a8e0-b14c0b489642.\n",
-      "> Parent node text: ผศ. พญ.กุสุมา ไชยสูตรnanอายุรศาสตร์โภชนาการคลินิก ต่อมไร้ท่อและเมตาบอลิซึม โรคเบาหวาน42\n",
+      "> Parent node id: 2d234303-1295-4be7-a3b5-747dd4d62a02.\n",
+      "> Parent node text: รศ. พญ.กอบหทัย สิทธิรณฤทธิ์พฤหัสบดี 13:30 - 17:00 น. สัปดาห์ที่ 2,4,5 ศุกร์ 13:30 - 17:00 น. สัปด...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: c91b5d02-c3c9-4a52-8b80-4aa1c1fca043.\n",
-      "> Parent node text: พญ.เบญจพร ชิณประทีปอังคาร 10:00 - 11:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 14:00 น. สัปดาห์ที่ 1,2,3...\n",
+      "> Parent node id: af84e3ac-39f6-47c6-bd89-c7d4a0fa6554.\n",
+      "> Parent node text: ศ.คลินิก พญ.ศิริรัตน์ คุปติวุฒิพฤหัสบดี 16:00 - 17:30 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์ทั่วไป ค...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: be5d401a-2e46-4e28-9881-8d28e73155e3.\n",
-      "> Parent node text: รศ. นพ.ทวี ชาญชัยรุจิราอังคาร 07:30 - 08:30 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 08:30 - 12:00 น. สัป...\n",
+      "> Parent node id: 016521b7-9f77-4e5b-b1a2-a1a7bde1e457.\n",
+      "> Parent node text: รศ. พญ.จริยา ทะรักษาอังคาร 16:00 - 19:00 น. สัปดาห์ที่ 2,3,4,5จิตเวชเด็กและวัยรุ่น59\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 64a62788-0e05-4b2f-906a-3a9099248d5b.\n",
-      "> Parent node text: พญ.มนต์สวรรค์ มินิพันธ์พุธ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,4,5 10:30 - 12:00 น. สัปดาห์ที่ 3 13:3...\n",
+      "> Parent node id: 74e73893-c443-45b7-8d23-8719bb5b3273.\n",
+      "> Parent node text: ผศ. พญ.กันต์กมล จัยสินศุกร์ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 16:00 น. สัปดาห์ที่ 1,2...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: d795d384-9ae7-4bbd-8250-a24f6d467def.\n",
-      "> Parent node text: นพ.ธีรยุทธ กนกรัตนาอังคาร 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 13:00 - 14:30 น. สัปดาห์...\n",
+      "> Parent node id: 391fd661-0b7c-4c3d-b424-18930b8aba7a.\n",
+      "> Parent node text: พญ.ปุญญิศา ปราชญ์โกสินทร์จันทร์ 16:30 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พุธ 16:30 - 20:00 น. สัปดาห...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 3dde0116-a6b8-40d9-a265-999b3d097c8f.\n",
-      "> Parent node text: ผศ. พญ.สิรินาถ สิรินทร์วราวงศ์พุธ 17:00 - 19:00 น. สัปดาห์ที่ 2,4,5 ศุกร์ 14:00 - 16:00 น. สัปดาห...\n",
+      "> Parent node id: 168b2e20-8def-45fa-b074-46938ee31c3f.\n",
+      "> Parent node text: พญ.คริษฐา ศุภนิมิตอมรจันทร์ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์49\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 5c001cfa-e935-4293-82ff-6f4c745460f8.\n",
-      "> Parent node text: รศ. นพ.จุลจักร ลิ่มศรีวิไลพฤหัสบดี 16:00 - 19:00 น. สัปดาห์ที่ 1,2,3,4,5 ศุกร์ 09:30 - 12:30 น. ส...\n",
+      "> Parent node id: de6a08a9-d2a0-42f1-9b19-7d56d9644bb2.\n",
+      "> Parent node text: อ. พญ.ธิดารัตน์ ปุรณะชัยคีรีพุธ 15:00 - 21:00 น. สัปดาห์ที่ 2,3,4,5 15:30 - 20:00 น. สัปดาห์ที่ 1...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 565e586b-7e31-4477-bd5d-c4e035134174.\n",
-      "> Parent node text: รศ. นพ.เอกรินทร์ โชติกวาณิชย์พุธ 13:00 - 13:30 น. สัปดาห์ที่ 1,2,3,4,5 เสาร์ 09:00 - 12:00 น. สัป...\n",
+      "> Parent node id: 41e2ea10-cfb7-45dc-803f-8e42800d9f4f.\n",
+      "> Parent node text: นพ.กันตณัฏฐ์ อยู่ตรีรักษ์พุธ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 17:00 - 20:00 น. สัปด...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: efc303a3-bf1d-4208-accf-bec44f56b42e.\n",
-      "> Parent node text: รศ. นพ.สุนัย ลีวันแสงทองพุธ 14:30 - 15:30 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 12:00 - 14:30 น. สัปดา...\n",
+      "> Parent node id: 95573b16-7b85-4a62-9599-f5291c3d8438.\n",
+      "> Parent node text: รศ. พญ.กอบหทัย สิทธิรณฤทธิ์พฤหัสบดี 13:30 - 17:00 น. สัปดาห์ที่ 2,4,5 ศุกร์ 13:30 - 17:00 น. สัปด...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 56a4125a-1558-4595-b0da-62f9593e28c6.\n",
-      "> Parent node text: อ. นพ.ชวลิต โชติเรืองนภาจันทร์ 15:30 - 17:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 16:00 - 18:00 น. สั...\n",
+      "> Parent node id: 3731fa7e-6430-40cb-8c8c-5484906d0910.\n",
+      "> Parent node text: ศ.คลินิก พญ.ศิริรัตน์ คุปติวุฒิพฤหัสบดี 16:00 - 17:30 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์ทั่วไป ค...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 040b943e-4287-4f1e-a3c0-cec190704305.\n",
-      "> Parent node text: ผศ. พญ.กุสุมา ไชยสูตรnanอายุรศาสตร์โภชนาการคลินิก ต่อมไร้ท่อและเมตาบอลิซึม โรคเบาหวาน42\n",
-      "\n",
-      "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: bbc4ae7b-c17f-42c3-b371-7d604c53b018.\n",
-      "> Parent node text: พญ.เบญจพร ชิณประทีปอังคาร 10:00 - 11:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 14:00 น. สัปดาห์ที่ 1,2,3...\n",
-      "\n",
-      "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 11b4d4cd-47a9-4499-9e56-be426b1ffaac.\n",
-      "> Parent node text: รศ. นพ.ทวี ชาญชัยรุจิราอังคาร 07:30 - 08:30 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 08:30 - 12:00 น. สัป...\n",
-      "\n",
-      "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 8af99df9-8cb7-44fe-b5f7-8c831e607775.\n",
-      "> Parent node text: พญ.มนต์สวรรค์ มินิพันธ์พุธ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,4,5 10:30 - 12:00 น. สัปดาห์ที่ 3 13:3...\n",
-      "\n",
-      "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: ee3c3ea0-0703-456a-9687-6cce42fe2fba.\n",
-      "> Parent node text: นพ.ธีรยุทธ กนกรัตนาอังคาร 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 13:00 - 14:30 น. สัปดาห์...\n",
+      "> Parent node id: f14a26c7-9644-4ce0-b57f-a5bf09da8bf8.\n",
+      "> Parent node text: รศ. พญ.จริยา ทะรักษาอังคาร 16:00 - 19:00 น. สัปดาห์ที่ 2,3,4,5จิตเวชเด็กและวัยรุ่น59\n",
       "\n"
      ]
     }
@@ -3129,26 +3113,39 @@
     "# query1 = \"ถ้ามีอาการเจ็บหน้าอกและหอบหืดขณะออกกำลังกายควรปรึกษาแพทย์ด้านใด\"\n",
     "# query2 = \"ดิฉันต้องการนัดพบนักจิตวิทยาเพื่อการปรึกษาเรื่องความเครียด สะดวกมาพบเฉพาะสัปดาห์แรกและสัปดาห์สุดท้ายของเดือน สามารถมาหาหมอได้วันไหนบ้าง\"\n",
     "# query3 = \"อยากหาแพทย์เฉพาะทางเพื่อรักษาอาการตกขาวออกมามากปนกับปัสสาวะ มีปัสสาวะแสบและปวดท้องน้อย\"\n",
-    "appointment_q = \"ผมอยากจะขอนัดหมายกับแพทย์ผู้เชี่ยวชาญด้านโรคเบาหวาน มีวันไหนว่างบ้างในสัปดาห์นี้\"\n",
+    "appointment_q = \"ช่วยจัดสรรเวลาเพื่อการปรึกษาเรื่องการเตรียมตัวก่อนการผ่าตัดหัวใจให้หน่อย ผมต้องการทราบวันที่ว่างของแพทย์เพื่อจัดเตรียมตารางเวลาของผมให้เหมาะสม\"\n",
     "\n",
     "response = produce_response(appointment_q)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "response:  ผศ. พญ.กุสุมา ไชยสูตร\n",
-      "- วันพุธ เวลา 14:30 - 15:30 น.\n",
-      "- วันพฤหัสบดี เวลา 12:00 - 14:30 น.\n",
+      "response:  คุณสามารถเข้ารับการปรึกษากับแพทย์ได้ในวันดังต่อไปนี้:\n",
       "\n",
-      "ผศ. พญ.สิรินาถ สิรินทร์วราวงศ์\n",
-      "- วันศุกร์ เวลา 14:00 - 16:00 น.\n"
+      "- วันพุธ เวลา 16:30 - 20:00 น.\n",
+      "- วันศุกร์ เวลา 16:30 - 20:00 น.\n",
+      "- วันพฤหัสบดี เวลา 16:00 - 17:30 น.\n",
+      "- วันอังคาร เวลา 16:00 - 19:00 น.\n",
+      "- วันจันทร์ เวลา 09:00 - 12:00 น.\n",
+      "- วันพุธ เวลา 13:00 - 16:00 น.\n",
+      "- วันพฤหัสบดี เวลา 14:00 - 17:00 น.\n",
+      "- วันศุกร์ เวลา 10:00 - 12:00 น.\n",
+      "- วันอาทิตย์ เวลา 10:00 - 12:00 น.\n",
+      "- วันอังคาร เวลา 08:00 - 12:00 น.\n",
+      "- วันพฤหัสบดี เวลา 08:00 - 11:30 น.\n",
+      "- วันศุกร์ เวลา 09:00 - 12:00 น.\n",
+      "- วันเสาร์ เวลา 07:30 - 12:00 น.\n",
+      "- วันพุธ เวลา 17:00 - 20:00 น.\n",
+      "- วันพฤหัสบดี เวลา 17:00 - 20:00 น.\n",
+      "- วันจันทร์ เวลา 17:00 - 20:00 น.\n",
+      "- วันศุกร์ เวลา 09:00 - 12:00 น.\n"
      ]
     }
    ],
@@ -3158,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3273,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -3294,6 +3291,27 @@
     "df.to_csv(fp, mode='a', header=False, index=False)\n",
     "print(f\"Data saved to {fp}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
