--- a/tutorial_notebooks/minnieLLM_test_appointment.ipynb
+++ b/tutorial_notebooks/minnieLLM_test_appointment.ipynb
@@ -3035,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -3043,68 +3043,84 @@
      "output_type": "stream",
      "text": [
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: a34c5570-be67-4837-af3c-f25f3e76658c.\n",
-      "> Parent node text: ผศ. พญ.กันต์กมล จัยสินศุกร์ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 16:00 น. สัปดาห์ที่ 1,2...\n",
+      "> Parent node id: 6b65ec66-0337-48f0-864d-118480114e14.\n",
+      "> Parent node text: ศ.คลินิก นพ.ชาญ ศรีรัตนสถาวรอังคาร 08:30 - 11:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 09:00 - 11:00 น...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 4f9f023b-ca40-4949-afb2-38404ab07e4a.\n",
-      "> Parent node text: พญ.ปุญญิศา ปราชญ์โกสินทร์จันทร์ 16:30 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พุธ 16:30 - 20:00 น. สัปดาห...\n",
+      "> Parent node id: 7b224e77-5b64-4c45-a60e-84b2b3b11b53.\n",
+      "> Parent node text: ผศ. นพ.ปุณณฤกษ์ ทองเจริญพฤหัสบดี 12:00 - 14:30 น. สัปดาห์ที่ 1,2,3,4,5 12:00 - 14:30 น. สัปดาห์ที...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: c682a2a0-ccde-48d6-b75e-af27ccea00c9.\n",
-      "> Parent node text: พญ.คริษฐา ศุภนิมิตอมรจันทร์ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์49\n",
+      "> Parent node id: 8359fe5f-5fbf-4eac-a77c-6a1a574872ba.\n",
+      "> Parent node text: ศ.คลินิก นพ.ดำรัส ตรีสุโกศลศุกร์ 08:30 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 15:00 น. สัปดาห์ที...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 5668ad8e-3f27-4c74-b954-d9b6e832f359.\n",
-      "> Parent node text: อ. พญ.ธิดารัตน์ ปุรณะชัยคีรีพุธ 15:00 - 21:00 น. สัปดาห์ที่ 2,3,4,5 15:30 - 20:00 น. สัปดาห์ที่ 1...\n",
+      "> Parent node id: 37f4c74d-390a-4701-b915-c81a0d751aaa.\n",
+      "> Parent node text: นพ.ปัญเกียรติ โตพิพัฒน์พุธ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 ศุกร์ 09:00 - 12:00 น. สัปดาห์ที...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: dbfbfc90-6796-402b-9012-e29c17eda444.\n",
-      "> Parent node text: นพ.กันตณัฏฐ์ อยู่ตรีรักษ์พุธ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 17:00 - 20:00 น. สัปด...\n",
+      "> Parent node id: 9312f054-b897-4130-ac4d-0bb8edf9d8f3.\n",
+      "> Parent node text: นพ.ธนัญชัย ธนสัมฤทธิ์พฤหัสบดี 16:30 - 19:00 น. สัปดาห์ที่ 1,2,3,4 16:30 - 19:00 น. สัปดาห์ที่ 5 ศ...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 2d234303-1295-4be7-a3b5-747dd4d62a02.\n",
-      "> Parent node text: รศ. พญ.กอบหทัย สิทธิรณฤทธิ์พฤหัสบดี 13:30 - 17:00 น. สัปดาห์ที่ 2,4,5 ศุกร์ 13:30 - 17:00 น. สัปด...\n",
+      "> Parent node id: b20dc09b-9647-4ce7-b89a-8cd1bdafaecc.\n",
+      "> Parent node text: ศ. พญ.วิวรรณ ทังสุบุตรอังคาร 08:30 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 ศุกร์ 12:30 - 13:30 น. สัปดาห์...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: af84e3ac-39f6-47c6-bd89-c7d4a0fa6554.\n",
-      "> Parent node text: ศ.คลินิก พญ.ศิริรัตน์ คุปติวุฒิพฤหัสบดี 16:00 - 17:30 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์ทั่วไป ค...\n",
+      "> Parent node id: 5f8a9d81-e0b1-41b1-bc52-79c69db009ea.\n",
+      "> Parent node text: ศ.คลินิก นพ.สมชาย ศรียศชาติพุธ 10:00 - 11:00 น. สัปดาห์ที่ 1,2,3,4,5การผ่าตัดหัวใจพิการแต่กำเนิด,...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 016521b7-9f77-4e5b-b1a2-a1a7bde1e457.\n",
-      "> Parent node text: รศ. พญ.จริยา ทะรักษาอังคาร 16:00 - 19:00 น. สัปดาห์ที่ 2,3,4,5จิตเวชเด็กและวัยรุ่น59\n",
+      "> Parent node id: ed627611-c95e-47b0-9583-8f91c5c088bf.\n",
+      "> Parent node text: นพ.เอก เพ็ชรดาชัยพุธ 11:00 - 11:30 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 16:00 น. สัปดาห์ที่ 1,2,3,4,5 ...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 74e73893-c443-45b7-8d23-8719bb5b3273.\n",
-      "> Parent node text: ผศ. พญ.กันต์กมล จัยสินศุกร์ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 16:00 น. สัปดาห์ที่ 1,2...\n",
+      "> Parent node id: 7b6bb446-ded3-452e-a8e4-1228e1b7af36.\n",
+      "> Parent node text: รศ. นพ.สัชชนะ พุ่มพฤกษ์พุธ 13:00 - 14:30 น. สัปดาห์ที่ 1,2,3,4,5 อาทิตย์ 13:00 - 14:30 น. สัปดาห์...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 391fd661-0b7c-4c3d-b424-18930b8aba7a.\n",
-      "> Parent node text: พญ.ปุญญิศา ปราชญ์โกสินทร์จันทร์ 16:30 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พุธ 16:30 - 20:00 น. สัปดาห...\n",
+      "> Parent node id: d8a8c69c-cbc4-48a4-b497-0f2afae1b2f8.\n",
+      "> Parent node text: รศ. นพ.ธรรมวัฒน์ ปรคนธรรพ์พุธ 09:00 - 12:00 น. สัปดาห์ที่ 2,4 ศุกร์ 17:00 - 19:00 น. สัปดาห์ที่ 1...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 168b2e20-8def-45fa-b074-46938ee31c3f.\n",
-      "> Parent node text: พญ.คริษฐา ศุภนิมิตอมรจันทร์ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์49\n",
+      "> Parent node id: 7a64a65b-b183-4b5e-93a0-64a6e1078645.\n",
+      "> Parent node text: ศ.คลินิก นพ.ชาญ ศรีรัตนสถาวรอังคาร 08:30 - 11:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 09:00 - 11:00 น...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: de6a08a9-d2a0-42f1-9b19-7d56d9644bb2.\n",
-      "> Parent node text: อ. พญ.ธิดารัตน์ ปุรณะชัยคีรีพุธ 15:00 - 21:00 น. สัปดาห์ที่ 2,3,4,5 15:30 - 20:00 น. สัปดาห์ที่ 1...\n",
+      "> Parent node id: 1cc6fdcc-9328-4b71-bba5-e51e0a8d19c6.\n",
+      "> Parent node text: ผศ. นพ.ปุณณฤกษ์ ทองเจริญพฤหัสบดี 12:00 - 14:30 น. สัปดาห์ที่ 1,2,3,4,5 12:00 - 14:30 น. สัปดาห์ที...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 41e2ea10-cfb7-45dc-803f-8e42800d9f4f.\n",
-      "> Parent node text: นพ.กันตณัฏฐ์ อยู่ตรีรักษ์พุธ 17:00 - 20:00 น. สัปดาห์ที่ 1,2,3,4,5 พฤหัสบดี 17:00 - 20:00 น. สัปด...\n",
+      "> Parent node id: 1ea36537-471b-4028-9dea-d3524eaa40e7.\n",
+      "> Parent node text: ศ.คลินิก นพ.ดำรัส ตรีสุโกศลศุกร์ 08:30 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 15:00 น. สัปดาห์ที...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 95573b16-7b85-4a62-9599-f5291c3d8438.\n",
-      "> Parent node text: รศ. พญ.กอบหทัย สิทธิรณฤทธิ์พฤหัสบดี 13:30 - 17:00 น. สัปดาห์ที่ 2,4,5 ศุกร์ 13:30 - 17:00 น. สัปด...\n",
+      "> Parent node id: 15c9a983-632d-48c2-8bb9-7173e9e16e47.\n",
+      "> Parent node text: นพ.ปัญเกียรติ โตพิพัฒน์พุธ 09:00 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 ศุกร์ 09:00 - 12:00 น. สัปดาห์ที...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: 3731fa7e-6430-40cb-8c8c-5484906d0910.\n",
-      "> Parent node text: ศ.คลินิก พญ.ศิริรัตน์ คุปติวุฒิพฤหัสบดี 16:00 - 17:30 น. สัปดาห์ที่ 1,2,3,4,5จิตเวชศาสตร์ทั่วไป ค...\n",
+      "> Parent node id: 8d806b10-aa16-4a20-85c4-06d573c20822.\n",
+      "> Parent node text: นพ.ธนัญชัย ธนสัมฤทธิ์พฤหัสบดี 16:30 - 19:00 น. สัปดาห์ที่ 1,2,3,4 16:30 - 19:00 น. สัปดาห์ที่ 5 ศ...\n",
       "\n",
       "> Merging 1 nodes into parent node.\n",
-      "> Parent node id: f14a26c7-9644-4ce0-b57f-a5bf09da8bf8.\n",
-      "> Parent node text: รศ. พญ.จริยา ทะรักษาอังคาร 16:00 - 19:00 น. สัปดาห์ที่ 2,3,4,5จิตเวชเด็กและวัยรุ่น59\n",
+      "> Parent node id: 42d5f857-8480-4793-9cbd-0fc76ed3ef8d.\n",
+      "> Parent node text: ศ. พญ.วิวรรณ ทังสุบุตรอังคาร 08:30 - 12:00 น. สัปดาห์ที่ 1,2,3,4,5 ศุกร์ 12:30 - 13:30 น. สัปดาห์...\n",
+      "\n",
+      "> Merging 1 nodes into parent node.\n",
+      "> Parent node id: 39cc93d1-1dda-4fc2-bf7c-322f576bc8b2.\n",
+      "> Parent node text: ศ.คลินิก นพ.สมชาย ศรียศชาติพุธ 10:00 - 11:00 น. สัปดาห์ที่ 1,2,3,4,5การผ่าตัดหัวใจพิการแต่กำเนิด,...\n",
+      "\n",
+      "> Merging 1 nodes into parent node.\n",
+      "> Parent node id: efd5831d-bf73-4c5b-8af5-9beb4e5f3c6c.\n",
+      "> Parent node text: นพ.เอก เพ็ชรดาชัยพุธ 11:00 - 11:30 น. สัปดาห์ที่ 1,2,3,4,5 13:00 - 16:00 น. สัปดาห์ที่ 1,2,3,4,5 ...\n",
+      "\n",
+      "> Merging 1 nodes into parent node.\n",
+      "> Parent node id: 617cba93-3032-4987-8444-ae22b0a8bcae.\n",
+      "> Parent node text: รศ. นพ.สัชชนะ พุ่มพฤกษ์พุธ 13:00 - 14:30 น. สัปดาห์ที่ 1,2,3,4,5 อาทิตย์ 13:00 - 14:30 น. สัปดาห์...\n",
+      "\n",
+      "> Merging 1 nodes into parent node.\n",
+      "> Parent node id: b9a524e4-7e4f-43d0-9284-f45f25d31294.\n",
+      "> Parent node text: รศ. นพ.ธรรมวัฒน์ ปรคนธรรพ์พุธ 09:00 - 12:00 น. สัปดาห์ที่ 2,4 ศุกร์ 17:00 - 19:00 น. สัปดาห์ที่ 1...\n",
       "\n"
      ]
     }
@@ -3120,32 +3136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "response:  คุณสามารถเข้ารับการปรึกษากับแพทย์ได้ในวันดังต่อไปนี้:\n",
+      "response:  **ผศ. นพ.ปุณณฤกษ์ ทองเจริญ**\n",
+      "- วันพฤหัสบดี เวลา 12:00 - 14:30 น. (สัปดาห์ที่ 1,2,3,4,5)\n",
       "\n",
-      "- วันพุธ เวลา 16:30 - 20:00 น.\n",
-      "- วันศุกร์ เวลา 16:30 - 20:00 น.\n",
-      "- วันพฤหัสบดี เวลา 16:00 - 17:30 น.\n",
-      "- วันอังคาร เวลา 16:00 - 19:00 น.\n",
-      "- วันจันทร์ เวลา 09:00 - 12:00 น.\n",
-      "- วันพุธ เวลา 13:00 - 16:00 น.\n",
-      "- วันพฤหัสบดี เวลา 14:00 - 17:00 น.\n",
-      "- วันศุกร์ เวลา 10:00 - 12:00 น.\n",
-      "- วันอาทิตย์ เวลา 10:00 - 12:00 น.\n",
-      "- วันอังคาร เวลา 08:00 - 12:00 น.\n",
-      "- วันพฤหัสบดี เวลา 08:00 - 11:30 น.\n",
-      "- วันศุกร์ เวลา 09:00 - 12:00 น.\n",
-      "- วันเสาร์ เวลา 07:30 - 12:00 น.\n",
-      "- วันพุธ เวลา 17:00 - 20:00 น.\n",
-      "- วันพฤหัสบดี เวลา 17:00 - 20:00 น.\n",
-      "- วันจันทร์ เวลา 17:00 - 20:00 น.\n",
-      "- วันศุกร์ เวลา 09:00 - 12:00 น.\n"
+      "**ศ.คลินิก นพ.สมชาย ศรียศชาติ**\n",
+      "- วันพุธ เวลา 10:00 - 11:00 น. (สัปดาห์ที่ 1,2,3,4,5)\n"
      ]
     }
    ],
@@ -3155,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -3270,7 +3272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
