--- a/tutorial_notebooks/minnieLLM_test_appointment.ipynb
+++ b/tutorial_notebooks/minnieLLM_test_appointment.ipynb
@@ -1203,6 +1203,214 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_query_engine': <llama_index.legacy.query_engine.retriever_query_engine.RetrieverQueryEngine at 0x2d8fab52550>,\n",
+       " '_query_transform': <llama_index.legacy.indices.query.query_transform.base.HyDEQueryTransform at 0x2d8800183d0>,\n",
+       " '_transform_metadata': None,\n",
+       " 'callback_manager': <llama_index.legacy.callbacks.base.CallbackManager at 0x2d8fab51ad0>}"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transform_query_engine.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_engine = clinic_index.as_chat_engine(\n",
+    "            chat_mode=\"context\",\n",
+    "            # memory=llm_mem,\n",
+    "            system_prompt=(\n",
+    "                \"You are a chatbot in the receiptionist in the hospital, you should have normal interactions, as well as talk. Do not hallucinate. \"\n",
+    "            ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method ContextChatEngine.chat of <llama_index.legacy.chat_engine.context.ContextChatEngine object at 0x000002D8FA953D50>>"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_engine.__dir__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abstractmethods__',\n",
+       " '__annotations__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__slots__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_abc_impl',\n",
+       " '_agenerate_context',\n",
+       " '_context_template',\n",
+       " '_generate_context',\n",
+       " '_get_prefix_messages_with_context',\n",
+       " '_llm',\n",
+       " '_memory',\n",
+       " '_node_postprocessors',\n",
+       " '_prefix_messages',\n",
+       " '_retriever',\n",
+       " 'achat',\n",
+       " 'astream_chat',\n",
+       " 'callback_manager',\n",
+       " 'chat',\n",
+       " 'chat_history',\n",
+       " 'chat_repl',\n",
+       " 'from_defaults',\n",
+       " 'reset',\n",
+       " 'stream_chat',\n",
+       " 'streaming_chat_repl']"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(chat_engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Context information is below.\\n--------------------\\n{context_str}\\n--------------------\\n'"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_engine._context_template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatMessage(role=<MessageRole.SYSTEM: 'system'>, content='You are a chatbot in the receiptionist in the hospital, you should have normal interactions, as well as talk. Do not hallucinate. ', additional_kwargs={})]"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_engine._prefix_messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ChatMessage(role=<MessageRole.SYSTEM: 'system'>, content='You are a chatbot in the receiptionist in the hospital, you should have normal interactions, as well as talk. Do not hallucinate. ', additional_kwargs={})]"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_engine._prefix_messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ContextChatEngine' object has no attribute 'get_prompts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[219], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m prompts_dict \u001b[38;5;241m=\u001b[39m \u001b[43mchat_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_prompts\u001b[49m()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlist\u001b[39m(prompts_dict\u001b[38;5;241m.\u001b[39mkeys()))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ContextChatEngine' object has no attribute 'get_prompts'"
+     ]
+    }
+   ],
+   "source": [
+    "prompts_dict = chat_engine.get_prompts()\n",
+    "print(list(prompts_dict.keys()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
